--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,6 +24,8 @@
   <!-- Fonts and Icons -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
 
   <!-- main css -->
   <link rel="stylesheet" href="{{ '/css/main.css' | prepend: site.baseurl }}">
