--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ $navy: #0C2340;
 $white: #ffffff;
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -21,3 +21,11 @@ main {
 #nav-logo {
   width: 150px;
 }
+
+#home a {
+  color: $white;
+}
+
+.parallax-container {
+     height: 400px;
+   }
