--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,15 +12,10 @@
         ga('send', 'pageview');
       </script>
     {% endif %}
-    <!--  Scripts-->
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="{{ "/js/materialize.js" | prepend: site.url }}"></script>
-    <script src="{{ "/js/init.js" | prepend: site.url }}"></script>
-    
+    {% include scripts.html %}
     <main>
         {{ content }}
     </main>
-
   </body>
 {% include footer.html %}
 </html>
