--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,25 +1,24 @@
 <footer class="page-footer">
-          <div class="container">
-            <div class="row">
-              <div class="col l6 s12">
-                <h5 class="black-text">Footer Content</h5>
-                <p class="black-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-              </div>
-              <div class="col l4 offset-l2 s12">
-                <h5 class="black-text">Links</h5>
-                <ul>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                  <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="footer-copyright">
-            <div class="container black-text">
-            © 2014 Copyright Text
-            <a class="black-text text-lighten-4 right" href="#!">More Links</a>
-            </div>
-          </div>
+<div class="container">
+  <div class="row">
+    <div class="col l6 s12">
+      <h5 class="black-text">Footer Content</h5>
+      <p class="black-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+    </div>
+    <div class="col l4 offset-l2 s12">
+      <h5 class="black-text">Links</h5>
+      <ul>
+        <li><a class="black-text text-lighten-3" href="#home">Home</a></li>
+        <li><a class="black-text text-lighten-3" href="#work">Work</a></li>
+        <li><a class="black-text text-lighten-3" href="#about">About</a></li>
+        <li><a class="black-text text-lighten-3" href="#contact">Contact</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<div class="footer-copyright">
+  <div class="container black-text">
+  © 2017 Copyright Text
+  </div>
+</div>
 </footer>
