--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,10 +1,13 @@
-<nav id="menu">
+<div id="menu" class="navbar-fixed">
+<nav>
   <div class="nav-wrapper">
-    <a href="#" class="brand-logo center">Logo</a>
-    <ul id="nav-mobile" class="left hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li>
+    <a href="#" class="brand-logo center"><img id="nav-logo" src="{{ "/static1.squarespace.png" | prepend: site.url }}" alt=""></a>
+    <ul id="nav-mobile" class="left hide-on-med-and-down section table-of-contents">
+      <li><a href="#home">Home</a></li>
+      <li><a href="#work">Work</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </div>
 </nav>
+</div>
