--- a/_sass/components/_navbar.scss
+++ b/_sass/components/_navbar.scss
@@ -141,7 +141,7 @@ nav {
       }
 
       &:hover {
-        background-color: rgba(0,0,0,.1);
+        background-color: rgba(0,0,0,0);
       }
     }
 
