--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
 <div id="menu" class="navbar-fixed">
 <nav>
   <div class="nav-wrapper">
+    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <a href="#" class="brand-logo center"><img id="nav-logo" src="{{ "/static1.squarespace.png" | prepend: site.url }}" alt=""></a>
     <ul id="nav-mobile" class="left hide-on-med-and-down section table-of-contents">
       <li><a href="#home">Home</a></li>
@@ -11,3 +12,9 @@
   </div>
 </nav>
 </div>
+<ul class="side-nav" id="mobile-demo">
+  <li><a href="#home">Home</a></li>
+  <li><a href="#work">Work</a></li>
+  <li><a href="#about">About</a></li>
+  <li><a href="#contact">Contact</a></li>
+</ul>
