added header text

--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -59,7 +59,7 @@
     }
     .jssorb05 div { background-position: -7px -7px; }
     .jssorb05 div:hover, .jssorb05 .av:hover { background-position: -37px -7px; }
-    .jssorb05 .av { background-position: -67px -7px; }
+    .jssorb05 .av { background-position: -97px -7px; }
     .jssorb05 .dn, .jssorb05 .dn:hover { background-position: -97px -7px; }
 
     /* jssor slider arrow navigator skin 22 css */
@@ -100,7 +100,7 @@
     </div>
     <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1300px;height:500px;overflow:hidden;">
         <div>
-            <img data-u="image" src="img/red.jpg" />
+            <img data-u="image" src="img/WK_WebBkgrd1300x620.jpg" />
             <div style="position:absolute;top:30px;left:30px;width:480px;height:120px;z-index:0;font-size:50px;color:#ffffff;line-height:60px;">TOUCH SWIPE SLIDER</div>
             <div style="position:absolute;top:300px;left:30px;width:480px;height:120px;z-index:0;font-size:30px;color:#ffffff;line-height:38px;">Build your slider with anything, includes image, content, text, html, photo, picture</div>
         </div>
