--- a/css/main.scss
+++ b/css/main.scss
@@ -38,11 +38,19 @@ footer {
   font-size: 1.3rem;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
 .parallax-container {
      height: 400px;
    }
 .card {
   box-shadow: none;
+}
+
+.table-of-contents {
+  text-transform: uppercase;
 }
 
 /* jssor slider bullet navigator skin 05 css */
