--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -100,16 +100,16 @@
     </div>
     <div data-u="slides" style="cursor:default;position:relative;top:0px;left:0px;width:1300px;height:500px;overflow:hidden;">
         <div>
-            <img data-u="image" src="img/WK_WebBkgrd1300x620.jpg" />
-            <div style="position:absolute;top:30px;left:30px;width:480px;height:120px;z-index:0;font-size:50px;color:#ffffff;line-height:60px;">TOUCH SWIPE SLIDER</div>
-            <div style="position:absolute;top:300px;left:30px;width:480px;height:120px;z-index:0;font-size:30px;color:#ffffff;line-height:38px;">Build your slider with anything, includes image, content, text, html, photo, picture</div>
+            <img data-u="image" src="img/WK_Work.jpg" />
+            <!-- <div style="position:absolute;top:30px;left:30px;width:480px;height:120px;z-index:0;font-size:50px;color:#ffffff;line-height:60px;">TOUCH SWIPE SLIDER</div>
+            <div style="position:absolute;top:300px;left:30px;width:480px;height:120px;z-index:0;font-size:30px;color:#ffffff;line-height:38px;">Build your slider with anything, includes image, content, text, html, photo, picture</div> -->
         </div>
         <div>
-            <img data-u="image" src="img/purple.jpg" />
+            <img data-u="image" src="img/Website.jpg" />
         </div>
         <a data-u="any" href="http://www.jssor.com" style="display:none">Full Width Slider</a>
         <div>
-            <img data-u="image" src="img/blue.jpg" />
+            <img data-u="image" src="img/WK_Work2.jpg" />
         </div>
     </div>
     <!-- Bullet Navigator -->
