--- a/_includes/head.html
+++ b/_includes/head.html
@@ -22,9 +22,9 @@
   <meta name="twitter:domain" content="{{ site.url }}">
   <meta property="twitter:image" content="{% if page.image %}{{ page.image }}{% else %}{{ site.default_img }}{% endif %}">
   <!-- Fonts and Icons -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
 
   <!-- main css -->
