--- a/css/main.scss
+++ b/css/main.scss
@@ -43,6 +43,28 @@ footer {
   font-weight: 700;
 }
 
+#cf {
+  position:relative;
+
+}
+
+#cf img{
+  position:absolute;
+  left:0;
+  -webkit-transition: opacity 0.5s ease-in-out;
+  -moz-transition: opacity 0.5s ease-in-out;
+  -o-transition: opacity 0.5s ease-in-out;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.get-kreative {
+  padding-top: 0rem;
+}
+
+img.top:hover {
+  opacity: 0;
+}
+
 .icons img {
   display: block;
   margin: auto;
@@ -53,7 +75,7 @@ footer {
 }
 
 .parallax-container {
-     height: 400px;
+     height: 500px;
    }
 .card {
   box-shadow: none;
@@ -76,6 +98,7 @@ footer {
 
 .black h1 {
   padding-top: 2rem;
+  margin-top: 0rem;
 }
 
 .black p {
