--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,24 +1,28 @@
 <footer class="page-footer">
 <div class="container">
   <div class="row">
-    <div class="col l6 s12">
-      <h5 class="black-text">Footer Content</h5>
-      <p class="black-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
+    <div class="col m2 s4 offset-s4 offset-m5">
+      <img src="img/wekreative_transGOLD.png" alt="" width="100%">
     </div>
-    <div class="col l4 offset-l2 s12">
-      <h5 class="black-text">Links</h5>
-      <ul>
-        <li><a class="black-text text-lighten-3" href="#home">Home</a></li>
-        <li><a class="black-text text-lighten-3" href="#work">Work</a></li>
-        <li><a class="black-text text-lighten-3" href="#about">About</a></li>
-        <li><a class="black-text text-lighten-3" href="#contact">Contact</a></li>
-      </ul>
+    <div class="col s12 l6 offset-l3 center">
+      <div class="col s3">
+        <a class="black-text text-lighten-3" href="#home">Home</a>
+      </div>
+      <div class="col s3">
+        <a class="black-text text-lighten-3" href="#work">Work</a>
+      </div>
+      <div class="col s3">
+        <a class="black-text text-lighten-3" href="#about">About</a>
+      </div>
+      <div class="col s3">
+        <a class="black-text text-lighten-3" href="#contact">Contact</a>
+      </div>
     </div>
   </div>
 </div>
 <div class="footer-copyright">
-  <div class="container black-text">
-  © 2017 Copyright Text
+  <div class="container black-text uppercase">
+  © 2017 Wekreative
   </div>
 </div>
 </footer>
