--- a/css/main.scss
+++ b/css/main.scss
@@ -118,6 +118,10 @@ img.top:hover {
   padding-right: 1rem;
 }
 
+.black-row {
+  background-color: #161616;
+}
+
 .card {
   background: transparent;
 }
