--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,26 +2,15 @@
 <div class="container">
   <div class="row">
     <div class="col m2 s4 offset-s4 offset-m5">
-      <img src="img/wekreative_transGOLD.png" alt="" width="100%">
+      <img class="footer-image"src="img/wekreative_transCHARCOAL.png" alt="" width="70%">
     </div>
-    <div class="col s12 l6 offset-l3 center">
-      <div class="col s3">
-        <a class="black-text text-lighten-3" href="#home">Home</a>
-      </div>
-      <div class="col s3">
-        <a class="black-text text-lighten-3" href="#work">Work</a>
-      </div>
-      <div class="col s3">
-        <a class="black-text text-lighten-3" href="#about">About</a>
-      </div>
-      <div class="col s3">
-        <a class="black-text text-lighten-3" href="#contact">Contact</a>
-      </div>
+    <div class="col s12">
+      <p class="center uppercase"><a class="black-text text-lighten-3" href="#home">Home</a> | <a class="black-text text-lighten-3" href="#work">Work</a> | <a class="black-text text-lighten-3" href="#about">About</a> | <a class="black-text text-lighten-3" href="#contact">Contact</a></p>
     </div>
   </div>
 </div>
 <div class="footer-copyright">
-  <div class="container black-text uppercase">
+  <div class="container black-text uppercase center">
   © 2017 Wekreative
   </div>
 </div>
