--- a/css/main.scss
+++ b/css/main.scss
@@ -133,3 +133,8 @@ img.top:hover {
 footer.page-footer .footer-copyright {
   background-color: #EAEAEA;
 }
+
+.footer-image {
+  display: block;
+  margin: auto;
+}
