--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,6 @@
-<div class="section white">
+<div id="contact" class="section scrollspy white">
   <div class="row container">
-    <div id="contact" class="section scrollspy">
+    <div class="section">
       <h2  class="header">Contact</h2>
       <div class="row">
         <form class="col s12">
