--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script src="{{ "/js/materialize.js" | prepend: site.url }}"></script>
+<script src="{{ "/js/materialize.min.js" | prepend: site.url }}"></script>
 <script src="{{ "/js/init.js" | prepend: site.url }}"></script>
 <script src="{{ "/js/page.js" | prepend: site.url }}"></script>
