--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,25 +3,25 @@
     <div class="section">
       <h2  class="header">Contact</h2>
       <div class="row">
-        <form class="col s12">
+        <form class="col s12" method="POST" action="http://formspree.io/hello@wekreative.com">
           <div class="row">
             <div class="input-field col s12 m4">
               <i class="material-icons prefix">account_circle</i>
-              <input id="icon_prefix" type="text" class="validate">
+              <input id="icon_prefix" type="text" class="validate" name="Name">
               <label for="icon_prefix">Name</label>
             </div>
             <div class="input-field col s12 m4">
               <i class="material-icons prefix">email</i>
-              <input id="email" type="email" class="validate">
+              <input id="email" type="email" class="validate" name="Email">
               <label for="email">Email</label>
             </div>
             <div class="input-field col s12 m4">
               <i class="material-icons prefix">mode_edit</i>
-              <input id="subject" type="text" class="validate">
+              <input id="subject" type="text" class="validate" name="subject">
               <label for="subject">Subject</label>
             </div>
             <div class="input-field col s12">
-              <textarea id="textarea1" class="materialize-textarea"></textarea>
+              <textarea id="textarea1" class="materialize-textarea" name="message"></textarea>
               <label for="textarea1">Message</label>
             </div>
             <button class="btn-flat waves-effect waves-light right" type="submit" name="action">Submit
