changed psotion of top parallax

--- a/css/main.scss
+++ b/css/main.scss
@@ -85,7 +85,11 @@ img.top:hover {
 
 .parallax-container {
      height: 500px;
-   }
+}
+
+.parallax-top {
+  position: fixed;
+}
 
 .card {
   box-shadow: none;
