--- a/css/main.scss
+++ b/css/main.scss
@@ -68,6 +68,7 @@ footer.page-footer {
 
 .get-kreative {
   padding-top: 0rem;
+  padding-bottom: 0rem;
 }
 
 img.top:hover {
@@ -77,6 +78,10 @@ img.top:hover {
 .icons img {
   display: block;
   margin: auto;
+}
+
+.icon-row {
+  margin-bottom: 0px;
 }
 
 .uppercase {
@@ -93,6 +98,11 @@ img.top:hover {
 
 .card {
   box-shadow: none;
+}
+
+.slide-icon {
+  position: relative;
+  padding: 0px !important;
 }
 
 .table-of-contents {
@@ -120,6 +130,7 @@ img.top:hover {
   font-size: large;
   padding-left: 1rem;
   padding-right: 1rem;
+  margin-bottom: 0;
 }
 
 .black-row {
@@ -141,4 +152,25 @@ footer.page-footer .footer-copyright {
 .footer-image {
   display: block;
   margin: auto;
+}
+
+.image {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: .5s ease;
+}
+
+.col:hover .overlay {
+  height: 100%;
 }
