--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -24,8 +24,9 @@
               <textarea id="textarea1" class="materialize-textarea" name="message"></textarea>
               <label for="textarea1">Message</label>
             </div>
-            <button class="btn-flat waves-effect waves-light right" type="submit" name="action">Submit
-              <i class="material-icons right">send</i>
+            <button class="btn-flat waves-effect waves-light right" type="submit" name="action">
+              <span><i class="material-icons right">send</i> Submit</span>
+
             </button>
           </div>
         </form>
