--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
 <!--  Scripts-->
 <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script src="{{ "/js/materialize.min.js" | prepend: site.url }}"></script>
-<script src="{{ "/js/init.js" | prepend: site.url }}"></script>
+<script src="{{"/js/jssor.slider-22.2.8.mini.js" | prepend: site.url }}" type="text/javascript"></script>
 <script src="{{ "/js/page.js" | prepend: site.url }}"></script>
