--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
       </div>
       <div class="col s12 l8 offset-l2">
         <h1 id="header-name" class="center uppercase">Wekreative Design Group</h1>
-        <h3 id="header-text" class="center" style="letter-spacing: 2px; font-size: 1.5rem"><i>your team of marketing experts</i></h3>
+        <h3 id="header-text" class="center" style="letter-spacing: 2px; font-size: 1.5rem"><i>bringing your brand to life</i></h3>
       </div>
      </div>
     </div>
