--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
 </div>
 <div class="footer-copyright">
   <div class="container black-text uppercase center">
-  © 2017 Wekreative
+  © {{ "now" | date: '%Y' }} Wekreative
   </div>
 </div>
 </footer>
