mixed content fix

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
     <div class="section">
       <h2  class="header">Contact</h2>
       <div class="row">
-        <form class="col s12" method="POST" action="http://formspree.io/hello@wekreative.com">
+        <form class="col s12" method="POST" action="https://formspree.io/hello@wekreative.com">
           <div class="row">
             <div class="input-field col s12 m4">
               <i class="material-icons prefix">account_circle</i>
